# cexy

./: .gitignore  README.md
api-gateway/: Cargo.toml
benches/: Cargo.toml  README.md  bench-operations-results-1775567441.md  bench-operations-results-step8.md  bench-orderbook-report-1775567407.md  bench-orderbook-report-step8.md  order_ops.rs  orderbook.rs
docs/: planning.md
engine/: Cargo.toml
engine/src/: commands.rs  engine.rs  engine_tests.rs  event_bus.rs  events.rs  lib.rs  shard.rs  shard_map.rs
engine/src/orderbook/: level_info.rs  mod.rs  order.rs  order_modify.rs  order_type.rs  orderbook.rs  side.rs  tests.rs  trade.rs  types.rs
gateway/: Cargo.toml
gateway/src/: app_state.rs  config.rs  engine_handle.rs  handlers.rs  handlers_tests.rs  http_models.rs  main.rs  parsing.rs  router.rs
planning/: readme.md
