[package]
name = "engine-benchmarks"
version = "0.1.0"
edition = "2024"

[dependencies]
criterion = "0.5"
engine = { path = "../engine" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bench]]
name = "orderbook"
harness = false
path = "orderbook.rs"

[[bin]]
name = "order_ops"
path = "order_ops.rs"
